# QuectoClaw

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  agent.md  deny.toml  docker-compose.yml  plan.md  test_workflow.yaml
.agent/workflows/: wasm-plugins.md
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  publish-crate.yml  release.yml
Formula/: quectoclaw.rb
src/: audit.rs  bus.rs  lib.rs  logger.rs  main.rs  market.rs  metrics.rs  session.rs
src/agent/: context.rs  gateway.rs  memory.rs  mod.rs
src/channel/: discord.rs  mod.rs  slack.rs  telegram.rs
src/config/: mod.rs
src/mcp/: mod.rs
src/provider/: factory.rs  http.rs  mod.rs  router.rs
src/tool/: exec.rs  filesystem.rs  mod.rs  plugin.rs  subagent.rs  vectordb_index.rs  vectordb_search.rs  wasm_plugin.rs  web.rs
src/tui/: app.rs  mod.rs  ui.rs
src/vectordb/: mod.rs
src/web/: handlers.rs  mod.rs  templates.rs
src/workflow/: mod.rs  parser.rs
tests/: integration_test.rs  mcp_test.rs  mock_mcp.py  test_config.json
tests/wasm_plugins/: wasm_hello.wasm
tests/wasm_plugins/hello/: Cargo.toml  manifest.json
tests/wasm_plugins/hello/src/: main.rs
