[package]
name = "quectoclaw"
version = "0.1.0"
edition = "2021"
description = "QuectoClaw — Ultra-efficient AI assistant in Rust"
license = "Apache-2.0"
authors = ["QuectoClaw contributors"]

[[bin]]
name = "quectoclaw"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "6"
thiserror = "2"
anyhow = "1"

# Interactive readline
rustyline = "15"

# Async channels (already in tokio, but for convenience)
async-trait = "0.1"

# Telegram bot
teloxide = { version = "0.13", features = ["macros"], optional = true }

# Discord bot
serenity = { version = "0.12", features = ["client", "gateway", "model"], optional = true }
futures-util = "0.3.32"
ratatui = "0.30.0"
crossterm = "0.29.0"

# Web UI
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# WASM plugin runtime
wasmtime = { version = "29", optional = true }
wasmtime-wasi = { version = "29", optional = true }

[features]
default = []
telegram = ["dep:teloxide"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
discord = ["dep:serenity"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3.25.0"
wiremock = "0.6.5"
